Finalizing the voters page
*Includes a button to invite voters
*Allows importing voters with Excel that matches using table headers.
*Allows preview & Editing of voters before importing.
*Moved Admin authentication to the default Login page to avoid callback issues.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,17 @@
+#Azure AD Client configuration used for Admin authentication.
 NEXT_PUBLIC_AZURE_CLIENT_ID=""
 NEXT_PUBLIC_AZURE_CLIENT_SECRET=""
 NEXT_PUBLIC_AZURE_TENANT_ID=""
 
+#Next-auth Configuration
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET="secret"
 JWT_SECRET="secret"
+
+# SMTP Settings for Outbound Email server.
+# Used for sending email invites to voters.
+EMAIL_SERVER_HOST=""
+EMAIL_SERVER_PORT=""
+EMAIL_SERVER_USER=""
+EMAIL_SERVER_PASSWORD=""
+EMAIL_FROM=""
