--- a/.env.local.example
+++ b/.env.local.example
@@ -15,3 +15,5 @@ EMAIL_SERVER_PORT=""
 EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 EMAIL_FROM=""
+
+NEXT_PUBLIC_SOCKET_IO_SERVER_URL="http://localhost:3001"
