--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "npm run build:ts",
+    "build:all": "npm run build:ts && npm run build:next",
+    "build:ts": "tsc -p tsconfig-server.json",
+    "build:next": "next build",
+    "lint": "next lint",
+    "clean": "npm run clean:ts",
+    "clean:all": "npm run clean:ts && npm run clean:next",
+    "clean:ts": "del-cli ./server/**/*.js ./shared/**/*.js",
+    "clean:next": "del-cli ./.next",
+    "start": "node index.js",
+    "dev:ts": "cross-env NODE_ENV=development APP_ENV=release nodemon",
+    "dev:next": "next dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
@@ -24,6 +32,7 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
@@ -35,22 +44,30 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.3",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
+    "del-cli": "^5.1.0",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
     "react": "^18",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "utf-8-validate": "^5.0.10",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
